# Tugas_Akhir

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile.airflow  Makefile  README.md  Tugas_akhir.docx  airflow.json  docker-compose.airflow.yml  docker-compose.prod.yml  docker-compose.yml  dump_mandarin.py  generate_golden_dataset.py  grafana.json  main.py  metrics.txt  metrics_utf8.txt  opik.json  pdf_extract.txt  pdf_full.txt  proposal_full.txt  pyproject.toml  query_out.txt  query_out2.txt  requirements-graphrag.txt  requirements.txt  run_graphrag_retrieval.py  run_kg_construction.py  scan_mandarin.py  setup-dev.sh  start-services.sh  supabase_new_schema.sql  test_etl_local.py  test_hf_endpoint.py  test_hf_insert.py  test_ingestion.py  test_weaviate.py  test_weaviate_env.py  translate_bulk.py  (+1 more)
backend/: pyproject.toml
backend/package/: pyproject.toml  replace.py
backend/package/knowledge/: __init__.py
backend/package/knowledge/etl/: config.py  run_worker.py
backend/package/knowledge/evaluation/: ragas_pipeline.py
backend/package/knowledge/kg/: __init__.py  config.py  entity_resolver.py  milvus_writer.py  ner_extractor.py  ontology.py
backend/package/knowledge/utils/: config_manager.py
backend/package/ta_backend_core/: telegram_bot.py
backend/package/ta_backend_core/assistant/: __init__.py
backend/package/ta_backend_core/knowledge/: __init__.py
backend/package/yunesa/: __init__.py  main.py
backend/package/yunesa/agents/: __init__.py  base.py  context.py  models.py
backend/package/yunesa/config/: app.py
backend/package/yunesa/knowledge/: __init__.py  base.py  factory.py  manager.py
backend/package/yunesa/models/: __init__.py  chat.py  embed.py  rerank.py
backend/package/yunesa/plugins/: __init__.py  guard.py
backend/package/yunesa/repositories/: agent_config_repository.py  agent_run_repository.py  conversation_repository.py  department_repository.py  evaluation_repository.py  knowledge_base_repository.py  knowledge_file_repository.py  mcp_server_repository.py  message_feedback_repository.py  skill_repository.py  subagent_repository.py  task_repository.py  user_repository.py
backend/package/yunesa/services/: agent_run_service.py  chat_service.py  conversation_service.py  evaluation_service.py  feedback_service.py  filesystem_service.py  kg_service.py  knowledge_fs_service.py  langfuse_service.py  mcp_service.py  oidc_service.py  remote_skill_install_service.py  run_queue_service.py  run_worker.py  skill_service.py  subagent_service.py  task_service.py  thread_files_service.py  tool_service.py  viewer_filesystem_service.py
backend/package/yunesa/utils/: __init__.py  evaluation_metrics.py  image_processor.py  logging_config.py  paths.py  question_utils.py
backend/server/: __init__.py  main.py  worker_main.py
backend/server/routers/: __init__.py  apikey_router.py  auth_router.py  chat_router.py  dashboard_router.py  department_router.py  evaluation_router.py  filesystem_router.py  graph_router.py  kg_router.py  knowledge_router.py  mcp_router.py  mindmap_router.py  skill_router.py  subagent_router.py  system_router.py  task_router.py  tool_router.py
backend/server/utils/: access_log_middleware.py  auth_middleware.py  auth_utils.py  common_utils.py  lifespan.py  migrate.py  user_utils.py
backend/test/: .env.test.example  run_tests.sh
backend/test/api/: __init__.py
backend/test/integration/api/: test_auth_router.py  test_chat_agent_sync.py  test_chat_resume_batch_questions.py  test_department_router.py  test_evaluation_router.py  test_knowledge_router.py
backend/test/unit/plugins/: test_ragflow_like_chunking.py
backend/test/unit/routers/: test_skill_router.py  test_subagent.py
backend/test/unit/services/: test_chat_stream_interrupt.py  test_tool_service.py
backend/tests/: conftest.py
backend/tests/integration/dags/: test_pipeline_flow.py
backend/tests/integration/kg/: test_kg_pipeline.py
backend/tests/unit/dags/: test_dag_integrity.py
backend/tests/unit/etl/: test_cleaner.py  test_deduplicator.py  (+1 more)
notebooks/: pyproject.toml
notebooks/build-graph/: Knowledge graph.ipynb  [markdown].py  build_thesaurus_taxonmy.ipynb  construction-kg.ipynb  constuction_knowledge_graph.ipynb  ieee-taxonomy.nt  ieee-taxonomy.ttl  ieee-taxonomy.xml  ieee-thesaurus.ttl  kg_export.json  kg_pipeline.ipynb
notebooks/build-graph/src/: __init__.py  data_loader.py  embedding.py  graph_builder.py  graphrag.py  nlp_parser.py  taxonomy.py
notebooks/build-graph/talent/: chunk.html  construct.ipynb  unstructured_data.ipynb
notebooks/scraping/: Enrich_Dosen_And_Map_Scival_Authors.ipynb  build_notebook.py  dosen_data.csv  hybrid_graphrag_prototype.ipynb  hybrid_graphrag_weaviate.ipynb  insert_er_cell.py  kg_cloud.env.template  kg_cons.ipynb  kg_cons_dump.py  kg_construction.ipynb  requirements_scraper.txt  scraping rps.ipynb  scraping_dosen_infokom.ipynb  scraping_paper_dosen_infokom.ipynb  scraping_paper_dosen_infokom_colab.ipynb  scrapy_pddikti.ipynb  test_parsing_paper.ipynb  test_training.ipynb
notebooks/scraping/dosen_pipeline/: __init__.py
notebooks/scraping/file_tabulars/: All_Authors_Universitas+Negeri+Surabaya_20260220.csv  All_Authors_Universitas+Negeri+Surabaya_20260322.csv  dosen_data.csv  dosen_infokom_final.csv  dosen_infokom_merged.csv  dosen_papers_scholar_colab.csv  dosen_papers_scholar_v1.csv  dosen_papers_scopus_filtered.csv  dosen_papers_scopus_final.csv  entity_embeddings.w2v  jadwal_kuliah_s1_sains_data.csv  jurnal_scholar.csv  karya.csv  paten.csv  penelitian.csv  pengabdian.csv  publications_scholar_scraped.csv  raw_pddikti_data.csv  raw_web_data.csv  studi.csv  unesa_authors.csv
notebooks/scraping/pipeline_cells/: cell1.py  cell2.py  cell3.py  cell4.py  cell5.py  cell6.py  cell7.py  cell8.py
notebooks/scraping/scraping_modules/: config.py  keyword_scraper.py  paper_pipeline.py  parsers.py  pddikti_client.py  pipeline.py  scival_client.py  scopus_client.py  semantic_client.py  sinta_client.py  utils.py  web_scraper.py
notebooks/training/: notebook_1_cpt.py  notebook_2_sft.py  test_training.ipynb
(+624 files in other folders)
