[project]
name = "tugas-akhir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "fake-useragent>=2.2.0",
    "fuzzywuzzy>=0.18.0",
    "google-auth-oauthlib>=1.2.2",
    "google-generativeai>=0.8.5",
    "graphdatascience>=1.16",
    "huggingface-hub[hf-xet]>=0.35.1",
    "ipykernel>=6.30.1",
    "keybert>=0.9.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "neo4j>=5.28.2",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "pddiktipy>=2.0.6",
    "plotly>=6.3.0",
    "pyotp>=2.9.0",
    "python-dotenv>=1.1.1",
    "qrcode[pil]>=8.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
    "sentence-transformers>=5.1.1",
    "umap-learn>=0.5.9.post2",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
