[project]
name = "tugas-akhir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alive-progress>=3.3.0",
    "beautifulsoup4==4.12.2",
    "dotenv>=0.9.9",
    "fake-useragent>=2.2.0",
    "fuzzywuzzy>=0.18.0",
    "gliner-spacy>=0.0.11",
    "glirel>=1.2.1",
    "google-auth-oauthlib>=1.2.2",
    "google-generativeai>=0.8.5",
    "google-search-results>=2.4.2",
    "graphdatascience>=1.16",
    "huggingface-hub[hf-xet]>=0.35.1",
    "icecream>=2.1.8",
    "ipykernel>=6.30.1",
    "keybert>=0.9.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "neo4j>=5.28.2",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "pddiktipy>=2.0.6",
    "plotly>=6.3.0",
    "pyinstrument>=5.1.1",
    "pymupdf>=1.26.7",
    "pyotp>=2.9.0",
    "pytest-playwright>=0.7.1",
    "python-dotenv>=1.1.1",
    "pyvis>=0.3.2",
    "qrcode[pil]>=8.2",
    "requests==2.31.0",
    "rich>=14.1.0",
    "scholarly==1.7.11",
    "scikit-learn>=1.7.2",
    "scrapingbee>=2.0.2",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
    "sentence-transformers>=5.1.1",
    "sinta-scraper>=2.2.1",
    "spacy>=3.8.8",
    "streamlit>=1.51.0",
    "torch-geometric>=2.7.0",
    "umap-learn>=0.5.9.post2",
    "undetected-chromedriver>=3.5.5",
    "watermark>=2.5.0",
    "webdriver-manager>=4.0.2",
]
