[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.3.0",
    "apache-airflow>=3.2.0",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fake-useragent>=2.2.0",
    "fuzzywuzzy>=0.18.0",
    "gensim>=4.4.0",
    "gliner>=0.2.26",
    "gliner-spacy>=0.0.11",
    "glirel>=1.2.1",
    "google-auth-oauthlib>=1.3.1",
    "google-generativeai>=0.8.6",
    "google-search-results>=2.4.2",
    "graphdatascience>=1.20",
    "groq>=1.1.2",
    "huggingface-hub[hf-xet]>=0.36.2",
    "icecream>=2.2.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "keybert>=0.9.0",
    "lancedb>=0.30.2",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "loguru>=0.7.3",
    "lxml>=6.0.4",
    "matplotlib>=3.10.8",
    "modal>=1.4.1",
    "neo4j>=6.1.0",
    "networkx>=3.6.1",
    "nltk>=3.9.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pddiktipy>=2.0.6",
    "plotly>=6.7.0",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "pyinstrument>=5.1.2",
    "pymupdf>=1.27.2.2",
    "pyotp>=2.9.0",
    "pypdf2==3.0.1",
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "qrcode[pil]>=8.2",
    "rdflib==6.3.1",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "scholarly>=1.7.11",
    "scikit-learn>=1.8.0",
    "scrapingbee>=2.0.2",
    "seaborn>=0.13.2",
    "selenium>=4.43.0",
    "sentence-transformers>=5.4.0",
    "seqeval>=1.2.2",
    "sinta-scraper>=2.2.1",
    "spacy>=3.8.14",
    "streamlit>=1.56.0",
    "supabase>=2.25.1",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "umap-learn>=0.5.12",
    "undetected-chromedriver>=3.5.5",
    "watermark>=2.6.0",
    "webdriver-manager>=4.0.2",
]
