[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ta-backend-core"
version = "0.6.0"
description = "Tugas Akhir Backend Core Package (Yuxi + Strwythura)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Yuxi Base
    "agent-sandbox>=0.0.26",
    "aioboto3>=13.0.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "chardet>=5.0.0",
    "colorlog>=6.9.0",
    "dashscope>=1.23.2",
    "deepagents>=0.2.5",
    "httpx>=0.27.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4",
    "langchain-core>=1.2.5",
    "langchain-deepseek>=1.0",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=1.0.2",
    "langchain-tavily>=0.2.13",
    "langchain-text-splitters>=1.0",
    "langfuse>=4.0.0",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-sqlite>=3.0",
    "langgraph-cli[inmem]>=0.4",
    "langsmith>=0.4",
    "lightrag-hku>=1.4.6",
    "llama-index>=0.14",
    "llama-index-readers-file>=0.4.7",
    "loguru>=0.7.3",
    "mcp>=1.20",
    "minio>=7.2.7",
    "neo4j>=5.28.1",
    "networkx>=3.5",
    "openai>=1.109",
    "opencv-python-headless>=4.11.0.86",
    "Pillow>=10.5.0",
    "psycopg[binary,pool]>=3.3.3",
    "pyjwt>=2.8.0",
    "pymilvus>=2.5.8",
    "pymysql>=1.1.0",
    "pypinyin>=0.55.0",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "redis>=5.2.0",
    "rich>=13.7.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "tabulate>=0.9.0",
    "tavily-python>=0.7.0",
    "tomli",
    "tomli-w",
    "torch>=2.8.0",
    "torchvision==0.23",
    "tqdm>=4.66.4",
    "typer>=0.16.0",
    "unstructured>=0.17.2",
    "wcmatch>=8.0.0",
    
    # Strwythura Additions
    "pydantic>=2.9.2",
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "sentence-transformers>=3.3.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "neo4j>=5.26.0",
    "spacy>=3.7.5",
    "python-telegram-bot>=20.0",
    "gliner>=0.2.14",
    "selenium>=4.25.0",
    "webdriver-manager>=4.0.2",
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.14.1",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "typing-extensions>=4.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ta_backend_core*"]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
ta-backend-core = { path = ".", editable = true }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
