[project]
name = "etl-scraping"
version = "0.1.0"
description = "Dependencies for Data Scraping and ETL"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.2",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
    "supabase>=2.0.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "ipython>=8.18.0",
    "pddiktipy>=2.0.6",
    "pytest>=8.0.0",
    "pyyaml>=6.0.0"
]